--- a/minetest.conf
+++ b/minetest.conf
@@ -1,3 +1,9 @@
+#Player physics
 movement_liquid_sink = 25
 movement_liquid_fluidity = 0.8
 movement_liquid_fluidity_smooth = 2
+
+#Mapgen v6
+mgv6_np_biome = 0.2, 0.8, (680, 680, 680), 9130, 3, 0.50, 2.0
+mgv6_np_humidity = 0.2, 0.8, (650, 650, 650), 72384, 3, 0.50, 2.0
+mgv6_np_steepness = 0.5, 0.5, (250, 250, 250), -932, 5, 0.7, 2.0
